assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
* {
    margin: 0;
    padding: 0;
}

/* general styles */

body {

    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family:'Kanit', sans-serif;
}

h1,
h2,
h3 {
    font-family:'Kanit', sans-serif;
}

main {
    flex: 1 0 auto;
    margin-top: 60px;
}

/* header */

header {
    position: fixed;
    display: flex;
    justify-content: space-between;
    background-color: rgba(32, 156, 238, 0.6);
    height: 60px;
    width: 100%;
}

/* styles for links in header, both logo and navbar links */

header a {
    text-decoration: none;
    color: inherit
}

/* Adding background elements for logo */

#logo {
    color: #FA5;
    background-color: #3a3a3a;
    padding: 10px;
    border-radius: 50%;
}

/* Navbar styles for menu with dropdown toggle */

#navmenu {
    list-style-type: none;
}

#navmenu li {
    color: #3a3a3a;
    padding: 15px 0;
}

nav {
    position: absolute;
    background-color: #FA5;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #FA5;
    display: none;
    top: 100%;
    height: auto;
}

i {
    margin-right: 10px;
}

/*Navmenu dropdown toggle */

#navmenu-toggle:checked~nav {
    display: block;
}

#navmenu-toggle {
    display: none;
}

.navmenu-toggle-label {
    font-size: 2rem;
    padding-top: 5%;
    padding-right: 5%;
}

/* styles for main content */

main div>section {
    border: 2px solid white;
}

/* Introduction Section */
#introduction {
    background: url("../images/introduction_content_background.jpg") no-repeat 10% 10%/cover;
    color: white;
    /* Makes image long enough to not give a busy feeling while still showing there is more info below */
    min-height: 85vh;
}

#intro-content {
    background-color: rgba(32, 156, 238, 0.9);
    width: 80vw;
    max-width: 400px;
    padding: 30px 30px;
    margin-top: 30vh;
    border-radius: 50%;
    text-align: center;
    align-items: center;
}

/* Contact intro section */
#contact-intro {
    background: url("../images/contact_landing_background.jpg") no-repeat center center/cover;
    color: #FA5;
    /* Makes image long enough to not give a busy feeling while still showing there is more info below */
    min-height: 85vh;
}

#contact-content {
    background-color: rgba(32, 156, 238, 0.7);
    width: 80vw;
    max-width: 400px;
    padding: 10px 10px;
    margin-top: 40vh;
    border-radius: 10px;
    text-align: center;
    align-items: center;
}

/* Previous work */

#previous-introduction {
    background: url("../images/previous_work_content_background.jpg") no-repeat center center/cover;
    border: solid #3a3a3a 2px;
    min-height: 85vh;
    margin: 10px;
}

#previous-content {
    background-color: #FA5;
    width: 80vw;
    max-width: 400px;
    margin-top: 30vh;
    text-align: center;
    padding: 10px;
    border: solid #3a3a3a 2px;
    border-radius: 10px;
}

.grey-background {
    background-color: #3a3a3a;
}

#previous-work-container {
    display: flex;
    flex-direction: column;
    max-width: 100%;
    justify-content: center;
}

#previous-content h2 {
    background-color: #FA5;
    margin: 10px;
}

#previous-work-section {
    border: solid #3a3a3a 2px;
}

#previous-work-gallery {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

#previous-work-gallery img {
    width: 90%;
    margin: 10px;
    border: solid #fa5 2px;
    padding: 5px;
    border-radius: 10px;
}

/* Service Section */

#services>h2 {
    text-align: center;
    background-color: white;
}

#services-content {
    display: flex;
    flex-direction: column;
}

.care-package {
    display: flex;
    width: 80%;
    margin: 10px auto;
    border-radius: 10%;
    padding: 10px;
    background-color: #FA5;
    border: solid 2px #3a3a3a;
    justify-content: space-around;
    align-items: center;
}

.care-package>h2 {
    text-align: center;
}

.care-package ul {
    list-style-type: none;
}

.price {
    background-color: black;
    color: orange;
    border-radius: 50%;
    padding: 10px;
    line-height: 35px;
    margin-top: 50px;
    text-decoration: none;
}

/* Video Section */
#working-video h2 {
    background-color: rgba(32, 156, 238, 0.6);
    border-radius: 50%;
    padding: 30px;
}

iframe {
    width: 95%;
    margin: 10px;
    height: 200px;
    border: 5px;
}

#working-video p {
    text-align: center;
    padding-bottom: 5px;
}

#credits {
    background-color: #FA5;
    border-radius: 10px;
    padding: 5px;
}

/* Contact section */
#contact-alternatives {
    background-color: #3a3a3a;
    color: #fa5;
}

#contact-alternatives>h2 {
    text-align: center;

}

#contact-container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    padding: 10px;
    border: solid #3a3a3a 2px;
    background-color: #3a3a3a;
    color: #fa5;
}

#physical-location p {
    color: white;
}

#contact-details a {
    text-decoration: none;
    color: white;
}

/* Contact form */
#contact-section {
    background-color: #3a3a3a;
}

#contact-form {
    display: flex;
    flex-direction: column;
    border: solid #FA5 2px;
    margin: 10px;
    border-radius: 10px;
    padding: 10px;
    background-color: #3a3a3a;
    color: white;
    max-width: 400px;
}

#contact-form h2 {
    color: #fa5;
}

.text-input {
    margin: 5px;
    background: transparent;
    padding: 5px;
    border: 2px solid rgb(32,
            156,
            238);
    border-radius: 5px;
    color: white;
}

.contact-button {
    width: 80px;
    background-color: rgb(32,
            156,
            238);
    padding: 5px;
    border-radius: 10px;
}

.contact-button:hover {
    background-color: #FA5;
}

/* Styles for footer */
footer {
    display: flex;
    flex-direction: column;
    background-color: rgba(32, 156, 238, 0.6);
}
/* ... */

